Added: - Abyssal Resonance Ingots - Abyssal Resonance Armor Set: Helmet, Chestplate, Leggings, Boots - Abyssal Resonance Tool Set: Sword, Pickaxe, Shovel, Axe, Hoe - Abyssal Resonance Tool Tier & Armor Material - JEI Support - Geckolib Dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,6 +30,12 @@ mapping_channel=official
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
 mapping_version=1.21.1
+
+jei_version=19.21.1.248
+
+geckolib_version=4.7.3
+geckolib_version_range=[4.7.3,5)
+
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=tidemark_additions
