--- a/gradle.properties
+++ b/gradle.properties
@@ -26,10 +26,10 @@ loader_version_range=[52,)
 #
 # Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
 # Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
-mapping_channel=official
+mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.21.1
+mapping_version=2024.11.17-1.21.1
 
 jei_version=19.21.1.248
 
