--- a/gradle.properties
+++ b/gradle.properties
@@ -52,4 +52,4 @@ mod_group_id=com.jackydoge
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=jackydoge
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Adds a few aquatic features: a new mob, new armour and tool sets, items and a structure
+mod_description=Adds a few aquatic features: two new mobs, new armor and tool sets, items, effects, and achievements
