--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,7 @@ runs/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+bin/
+run-data/
+generated/
